@@ -183,7 +183,7 @@ follow these instructions:
 <p><ol>
   <li>Create an empty harddisk image, which will be the root disk
 	that NetBSD installs itself onto:<pre>
-	<b>dd if=/dev/zero of=nbsd_pmax.img bs=1024 count=1 seek=3000000</b>
+	<b>dd if=/dev/zero of=nbsd_pmax.img bs=1024 count=1 seek=3800000</b>
 
 </pre>
   <li>Download a NetBSD CD-ROM iso image:<pre>
